kubernetes-adapter.yml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: kubernetes-adapter-v1
spec:
  selector: 
    matchLabels:
      app: kubernetes-adapter-v1
  replicas: 1
  template:
    metadata:
      labels:
        app: kubernetes-adapter-v1
    spec:
      containers:
      - name: kubernetes-adapter-v1
        image: consortit-docker-cme-local.jfrog.io/kubernetes-adapter:image-version
        ports:
        - containerPort: 8080
        - containerPort: 8081
      imagePullSecrets:
        - name: regsecret
---
apiVersion: v1
kind: Service
metadata:
  name: kubernetes-adapter-v1
  labels:
    app: kubernetes-adapter-v1
    version: v1
spec:
  type: ClusterIP
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
      name: external
    - port: 81
      protocol: TCP
      targetPort: 8081
      name: external2
  selector:
    app: kubernetes-adapter-v1
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kubernetes-adapter-v1
  labels:
    app: kubernetes-adapter-v1
spec:
  rules:
  - host: "cme.dev.k8s.consort-it.de"
    http:
      paths:
      - path: /api/v1/kubernetes-adapter
        backend:
          serviceName: "kubernetes-adapter-v1"
          servicePort: 80
      - path: /api/v1/kubernetes-adapter/health
        backend:
          serviceName: "kubernetes-adapter-v1"
          servicePort: 81
      - path: /api/v1/kubernetes-adapter/metrics
        backend:
          serviceName: "kubernetes-adapter-v1"
          servicePort: 81
